// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create-dictionary-item should create a dictionary item 1`] = `
{
  "content": [],
  "structuredContent": {
    "id": "00000000-0000-0000-0000-000000000000",
    "message": "Dictionary item created successfully",
  },
}
`;

exports[`create-dictionary-item should create a dictionary item 2`] = `
[
  {
    "id": "00000000-0000-0000-0000-000000000000",
    "name": "_Test Dictionary Created",
    "parent": null,
    "translatedIsoCodes": [
      "en-US",
    ],
  },
]
`;

exports[`create-dictionary-item should create a dictionary item with parent 1`] = `
{
  "content": [],
  "structuredContent": {
    "id": "00000000-0000-0000-0000-000000000000",
    "message": "Dictionary item created successfully",
  },
}
`;

exports[`create-dictionary-item should create a dictionary item with parent 2`] = `
[
  {
    "id": "00000000-0000-0000-0000-000000000000",
    "name": "_Test Child Dictionary",
    "parent": {
      "id": "00000000-0000-0000-0000-000000000000",
    },
    "translatedIsoCodes": [
      "en-US",
    ],
  },
]
`;

exports[`create-dictionary-item should handle existing dictionary item 1`] = `
{
  "content": [],
  "isError": true,
  "structuredContent": {
    "detail": "Another dictionary item exists with the same name. Dictionary item names must be unique.",
    "operationStatus": "DuplicateItemKey",
    "status": 409,
    "title": "Duplicate dictionary item name detected",
    "type": "Error",
  },
}
`;
